Proyecto1/GeneradorFormularios/src/Analizadores/Restringir/parserRestringir.java
/* parserRestringir.java */
/* Generated By:JavaCC: Do not edit this line. parserRestringir.java */
package Analizadores.Restringir;
import AST.Nodo;
import java.io.ByteArrayInputStream;
import java.io.InputStream;
import java.util.ArrayList;

public class parserRestringir implements parserRestringirConstants {
    public static Nodo main(String args[]) throws ParseException
    {
        if(args.length>0)
        {

            InputStream data = new ByteArrayInputStream(args[0].getBytes());
            parserRestringir analizador = new parserRestringir(data);
            return analizador.Inicio();
        }
        else
        {
            try
            {
                parserRestringir analizador = new parserRestringir(System.in);
                analizador.Inicio();
            }
            catch (ParseException e)
            {
                System.out.println(e.getMessage());
                System.out.println("Errores------------------");
            }
        }
        return null;
    }

    void errorPanico(int tokenSinc)
    {
        ParseException e = generateParseException();
        Token t;
        do
        {
            t = getNextToken();
        }
        while (t.kind != tokenSinc);
    }

    public void imprimir(String mensaje)
    {
        System.out.println(mensaje);
    }

  final public Nodo Inicio() throws ParseException {Nodo aux = new Nodo("restringir","restringir",0,0);
    Nodo nuevo = null;
    Token t= null;
    nuevo = logica();
    jj_consume_token(0);
aux.add(nuevo); {if ("" != null) return aux;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo logica() throws ParseException {Nodo izquierdo;
    Nodo derecho;
    Token t = null;
    izquierdo = exprAnd();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      t = jj_consume_token(or);
      derecho = exprAnd();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo exprAnd() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Token t = null;
    Nodo nuevo =null;
    izquierdo = Relacional();
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      t = jj_consume_token(and);
      derecho = Relacional();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Relacional() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Nodo operador = null;
    izquierdo = Comparacion();
    label_3:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_3;
      }
      operador = opRelacional2();
      derecho = Comparacion();
Nodo aux = izquierdo;
            izquierdo = new Nodo(operador.getTipo(),operador.getValue(),operador.getColumna(),operador.getLinea());
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Comparacion() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Nodo operador = null;
    izquierdo = Expr();
    label_4:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_4;
      }
      operador = opRelacional();
      derecho = Expr();
Nodo aux = izquierdo;
            izquierdo = new Nodo(operador.getTipo(),operador.getValue(),operador.getColumna(),operador.getLinea());
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo opRelacional2() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case igual:{
      t = jj_consume_token(igual);
{if ("" != null) return new Nodo("igual",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case desigual:{
      t = jj_consume_token(desigual);
{if ("" != null) return new Nodo("desigual",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo opRelacional() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case mayorque:{
      t = jj_consume_token(mayorque);
{if ("" != null) return new Nodo("maryoque",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case menorque:{
      t = jj_consume_token(menorque);
{if ("" != null) return new Nodo("menorque",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case mayorigualque:{
      t = jj_consume_token(mayorigualque);
{if ("" != null) return new Nodo("mayorigualque",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case menorigualque:{
      t = jj_consume_token(menorigualque);
{if ("" != null) return new Nodo("menorigualque",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo Expr() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Token t = null;
    izquierdo = ExprMulti();
    label_5:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case suma:{
        t = jj_consume_token(suma);
        break;
        }
      case menos:{
        t = jj_consume_token(menos);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      derecho = ExprMulti();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo ExprMulti() throws ParseException {Nodo izquierdo = null;
    Nodo derecho = null;
    Token t = null;
    izquierdo = ExprPotencia();
    label_6:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case multi:{
        t = jj_consume_token(multi);
        break;
        }
      case div:{
        t = jj_consume_token(div);
        break;
        }
      case mod:{
        t = jj_consume_token(mod);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      derecho = ExprPotencia();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo ExprPotencia() throws ParseException {Nodo izquierdo = null;
    Nodo nuevo =  new Nodo("ExpPotencia","ExpPotencia",0,0);
    Nodo derecho = null;
    Token t = null;
    izquierdo = Elemental();
    label_7:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_7;
      }
      t = jj_consume_token(potencia);
      derecho = Elemental();
Nodo aux = izquierdo;
            izquierdo = new Nodo(t.image,t.image,t.beginColumn, t.beginLine);
            izquierdo.add(aux);
            izquierdo.add(derecho);
    }
{if ("" != null) return izquierdo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo Elemental() throws ParseException {Nodo nuevo = null;
    Nodo auxiliar = null;
    Token t = null;
    Token t1 = null;
    Token t2 = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case dospuntos:{
      t = jj_consume_token(dospuntos);
{if ("" != null) return new Nodo("var","padre",t.beginColumn, t.beginLine);}
      break;
      }
    case punto:{
      t = jj_consume_token(punto);
{if ("" != null) return new Nodo("var","this",t.beginColumn, t.beginLine);}
      break;
      }
    case entero:{
      t = jj_consume_token(entero);
{if ("" != null) return new Nodo("entero",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case doble:{
      t = jj_consume_token(doble);
{if ("" != null) return new Nodo("doble",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case caracter:{
      t = jj_consume_token(caracter);
{if ("" != null) return new Nodo("caracter",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case varP:{
      t = jj_consume_token(varP);
String sub = t.image.substring(2,t.image.length()-1); {if ("" != null) return new Nodo("varP",sub,t.beginColumn, t.beginLine);}
      break;
      }
    case cadena:{
      t = jj_consume_token(cadena);
{if ("" != null) return new Nodo("cadena",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case fechahora:{
      t = jj_consume_token(fechahora);
{if ("" != null) return new Nodo("fechahora",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case hora:{
      t = jj_consume_token(hora);
{if ("" != null) return new Nodo("hora",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case fecha:{
      t = jj_consume_token(fecha);
{if ("" != null) return new Nodo("fecha",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case verdadero:{
      t = jj_consume_token(verdadero);
{if ("" != null) return new Nodo("verdadero",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case falso:{
      t = jj_consume_token(falso);
{if ("" != null) return new Nodo("falso",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    case parA:{
      t = jj_consume_token(parA);
      auxiliar = logica();
      jj_consume_token(parC);
nuevo = new Nodo("Expr","()",t.beginColumn, t.beginLine);
        nuevo.add(auxiliar);
        {if ("" != null) return nuevo;}
      break;
      }
    case menos:{
      t = jj_consume_token(menos);
      auxiliar = logica();
nuevo = new Nodo("expr","expr",t.beginColumn, t.beginLine);
        nuevo.add(new Nodo("menos","menos",t.beginColumn,t.beginLine));
        nuevo.add(auxiliar);
        {if ("" != null) return nuevo;}
      break;
      }
    case not:{
      t = jj_consume_token(not);
      auxiliar = logica();
nuevo = new Nodo("expr","expr",t.beginColumn, t.beginLine);
        nuevo.add(new Nodo("not","not",t.beginColumn,t.beginLine));
        nuevo.add(auxiliar);
        {if ("" != null) return nuevo;}
      break;
      }
    case funcion:{
      t = jj_consume_token(funcion);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case fechahora:
      case fecha:
      case hora:
      case punto:
      case dospuntos:
      case varP:
      case entero:
      case doble:
      case verdadero:
      case falso:
      case menos:
      case not:
      case parA:
      case funcion:
      case caracter:
      case cadena:{
        auxiliar = listaParametros();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      t2 = jj_consume_token(parC);
if(auxiliar!=null)
            {
                nuevo =  new Nodo("funcion",t.image,t.beginColumn, t.beginLine);
                for(Nodo nod: auxiliar.getHijos()){nuevo.add(nod);}
                {if ("" != null) return nuevo;}
            }
            {if ("" != null) return new Nodo("funcion",t.image,t.beginColumn, t.beginLine);}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo listaParametros() throws ParseException {Nodo izquierdo = null;
    Nodo nuevo =  new Nodo("parametros","parametros",0,0);
    Nodo derecho = null;
    Token t = null;
    izquierdo = logica();
    label_8:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_8;
      }
      t = jj_consume_token(coma);
      derecho = logica();
nuevo.add(derecho);
    }
nuevo.addI(izquierdo);
        {if ("" != null) return nuevo;}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_3_5()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(24)) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) return true;
    }
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3R_15()
 {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3R_9()
 {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_40()
 {
    if (jj_scan_token(funcion)) return true;
    return false;
  }

  private boolean jj_3R_14()
 {
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3R_39()
 {
    if (jj_scan_token(not)) return true;
    return false;
  }

  private boolean jj_3R_38()
 {
    if (jj_scan_token(menos)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_scan_token(or)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_24()
 {
    if (jj_scan_token(menorigualque)) return true;
    return false;
  }

  private boolean jj_3R_23()
 {
    if (jj_scan_token(mayorigualque)) return true;
    return false;
  }

  private boolean jj_3R_22()
 {
    if (jj_scan_token(menorque)) return true;
    return false;
  }

  private boolean jj_3R_18()
 {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3R_21()
 {
    if (jj_scan_token(mayorque)) return true;
    return false;
  }

  private boolean jj_3R_37()
 {
    if (jj_scan_token(parA)) return true;
    return false;
  }

  private boolean jj_3R_36()
 {
    if (jj_scan_token(falso)) return true;
    return false;
  }

  private boolean jj_3R_35()
 {
    if (jj_scan_token(verdadero)) return true;
    return false;
  }

  private boolean jj_3R_34()
 {
    if (jj_scan_token(fecha)) return true;
    return false;
  }

  private boolean jj_3R_33()
 {
    if (jj_scan_token(hora)) return true;
    return false;
  }

  private boolean jj_3R_32()
 {
    if (jj_scan_token(fechahora)) return true;
    return false;
  }

  private boolean jj_3R_31()
 {
    if (jj_scan_token(cadena)) return true;
    return false;
  }

  private boolean jj_3R_30()
 {
    if (jj_scan_token(varP)) return true;
    return false;
  }

  private boolean jj_3R_20()
 {
    if (jj_scan_token(desigual)) return true;
    return false;
  }

  private boolean jj_3R_29()
 {
    if (jj_scan_token(caracter)) return true;
    return false;
  }

  private boolean jj_3R_28()
 {
    if (jj_scan_token(doble)) return true;
    return false;
  }

  private boolean jj_3R_11()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) return true;
    }
    return false;
  }

  private boolean jj_3R_19()
 {
    if (jj_scan_token(igual)) return true;
    return false;
  }

  private boolean jj_3R_27()
 {
    if (jj_scan_token(entero)) return true;
    return false;
  }

  private boolean jj_3R_26()
 {
    if (jj_scan_token(punto)) return true;
    return false;
  }

  private boolean jj_3R_17()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) {
    jj_scanpos = xsp;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) {
    jj_scanpos = xsp;
    if (jj_3R_33()) {
    jj_scanpos = xsp;
    if (jj_3R_34()) {
    jj_scanpos = xsp;
    if (jj_3R_35()) {
    jj_scanpos = xsp;
    if (jj_3R_36()) {
    jj_scanpos = xsp;
    if (jj_3R_37()) {
    jj_scanpos = xsp;
    if (jj_3R_38()) {
    jj_scanpos = xsp;
    if (jj_3R_39()) {
    jj_scanpos = xsp;
    if (jj_3R_40()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_25()
 {
    if (jj_scan_token(dospuntos)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_13()) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3R_12()
 {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_7()
 {
    if (jj_scan_token(potencia)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(27)) {
    jj_scanpos = xsp;
    if (jj_scan_token(28)) {
    jj_scanpos = xsp;
    if (jj_scan_token(29)) return true;
    }
    }
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3R_16()
 {
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_3R_11()) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(and)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_scan_token(coma)) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3R_10()
 {
    if (jj_3R_12()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public parserRestringirTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[6];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40080000,0x80300000,0x5000000,0x38000000,0x406e29c,0x406e29c,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x1,0x0,0x0,0x358,0x358,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[8];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public parserRestringir(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public parserRestringir(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new parserRestringirTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 6; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
